authN-authZ/auth-istio/gmc-based/chatQnA_router_gateway_oauth.yaml
# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: chatqna-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - chatqna-service.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: chatqna-virtual-service
  namespace: istio-system
spec:
  gateways:
  - istio-system/chatqna-gateway
  hosts:
  - chatqna-service.com
  http:
  - corsPolicy:
      allowCredentials: true
      allowHeaders:
      - content-type
      - authorization
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - PUT
      - DELETE
      allowOrigins:
      - regex: http://chatqna-ui.com:.*
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: router-service.chatqa.svc.cluster.local
        port:
          number: 8080
