authN-authZ/auth-istio/gmc-based/chatQnA_ui_gateway.yaml
# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: chatqna-ui-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - chatqna-ui.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: chatqna-ui-virtual-service
  namespace: istio-system
spec:
  gateways:
  - istio-system/chatqna-ui-gateway
  hosts:
  - chatqna-ui.com
  http:
  - match:
    - uri:
        prefix: /oauth2
    route:
    - destination:
        host: oauth-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 4180
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chatqna-ui.default.svc.cluster.local
        port:
          number: 5174
